# ccs-py

./: .gitignore  .travis.yml  ARCHITECTURE.md  CCS.ipynb  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TOOLS.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
ccspy/: ast.py  dag.py  formula.py  parser.py  property.py  rule_tree.py  search_state.py  stringval.py  to_dnf.py
src/ccs/: __init__.py  ast.py  dag.py  dnf.py  dump.py  error.py  formula.py  parser.py  property.py  rule_tree.py  search_state.py  stringval.py
src/ccs/cli/: __init__.py  _util.py  dump.py  query.py  shell.py
test/: acceptance_tests.txt  test_acceptance.py  test_ast.py  test_dnf.py  test_formula.py  test_parser.py  test_search.py
